[workspace]
members = [".", "benchmarks/"]

[package]
name = "winnow"
version = "0.2.0"
description = "A byte-oriented, zero-copy, parser combinators library"
license = "MIT"
repository = "https://github.com/winnow-rs/winnow"
categories = ["parsing"]
keywords = ["parser", "parser-combinators", "parsing", "streaming", "bit"]
edition = "2018"
rust-version = "1.54.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]
autoexamples = false

[package.metadata.docs.rs]
features = ["unstable-doc"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/winnow-rs/winnow/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
alloc = []
std = ["alloc", "memchr/std"]
default = ["std"]

unstable-doc = ["alloc", "std"]

[dependencies]
memchr = { version = "2.3", default-features = false }

[dev-dependencies]
doc-comment = "0.3"
proptest = "1.0.0"

[profile.bench]
debug = true
lto = true
codegen-units = 1

[[test]]
name = "arithmetic"

[[test]]
name = "arithmetic_ast"
required-features = ["alloc"]

[[test]]
name = "css"

[[test]]
name = "custom_errors"

[[test]]
name = "float"

[[test]]
name = "ini"
required-features = ["alloc"]

[[test]]
name = "ini_str"
required-features = ["alloc"]

[[test]]
name = "issues"
required-features = ["alloc"]

[[test]]
name = "json"

[[test]]
name = "mp4"
required-features = ["alloc"]

[[test]]
name = "multiline"
required-features = ["alloc"]

[[test]]
name = "overflow"

[[test]]
name = "reborrow_fold"

[[test]]
name = "fnmut"
required-features = ["alloc"]

[[example]]
name = "custom_error"
required-features = ["alloc"]
path = "examples/custom_error.rs"

[[example]]
name = "json"
required-features = ["alloc"]
path = "examples/json.rs"

[[example]]
name = "json_iterator"
required-features = ["alloc"]
path = "examples/json_iterator.rs"

[[example]]
name = "iterator"
path = "examples/iterator.rs"

[[example]]
name = "s_expression"
path = "examples/s_expression.rs"
required-features = ["alloc"]

[[example]]
name = "string"
required-features = ["alloc"]
path = "examples/string.rs"
