
[package]
name = "winnow-fuzz"
version = "0.0.0"
authors = ["David Korczynski <david@adalogics.com>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[package.metadata.release]
release = false

[dependencies]
libfuzzer-sys = "0.4.6"

[dependencies.winnow]
path = ".."

[[bin]]
name = "fuzz_arithmetic"
path = "fuzz_targets/fuzz_arithmetic.rs"
test = false
